# desktop

./: .gitignore  .mcp.json  Cargo.toml  PLAN-inline-generation.md  bun.lockb  markdown-render-fixture.md  package-lock.json  package.json  pnpm-lock.yaml  sitemap.xml  tailwind.config.js  vite.config.ts
.github/: pull_request_template.md
.github/workflows/: rust.yaml  tauri-edge.yaml  tauri-release.yaml
backend/: Cargo.toml  tauri.conf.json  test_terminal.sh
backend/src/: advanced_settings.rs  main.rs  main_window.rs  menu.rs  sqlite.rs  state.rs  templates.rs
crates/atuin-desktop-runtime/: Cargo.toml
crates/atuin-run/: Cargo.toml
crates/atuin-run/src/: app.rs  executor.rs  hub.rs  main.rs  runbooks.rs  runtime.rs  ui.rs
crates/atuin-run/src/ui/: manager.rs  renderer.rs  streaming.rs  terminal_viewport.rs  viewport.rs
dev/docs/: EXECUTION_SYSTEM.md
docs/: mkdocs.yml  pyproject.toml  secrets.md  workspaces.md
docs/docs/: block-local-state.md  templating.md  troubleshooting.md
docs/hub/: collaborative-editing.md  getting-started.md  sharing-runbooks.md
docs/specs/: agent-block-spec.md
mcp-server/: bun.lockb  mcp.md  package.json  tsconfig.json
mcp-server/src/: cli.ts  index.ts  types.ts
runbooks/: Run Rust tests.atrb
search/: search_index.json
signatures/version1/: cla.json
src/: main.tsx  server_notification_manager.ts  socket.ts  styles.css
src/lib/: editor_utils.ts  global_options.ts  phoenix_provider.ts  runbook_editor.ts  ydoc_to_blocknote.ts
src/rs-bindings/: AIMessageContentPart.ts  BlockLifecycleEvent.ts  BlockOutput.ts  (+7 more)
(+281 files in other folders)
